[gd_scene load_steps=4 format=2]

[ext_resource path="res://MapUIs/GalaxyMap/CompanyHQ.gd" type="Script" id=1]
[ext_resource path="res://MapUIs/GalaxyMap/companyHQ.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 23.0

[node name="CompanyHQ" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
texture_normal = ExtResource( 2 )
expand = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="SizeTween" type="Tween" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
